--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
 		<version>3.0.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.brunohaf</groupId>
+	<groupId>com.cefetqps</groupId>
 	<artifactId>cefet-qps</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>cefet-qps</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>8</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
