--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
 	<groupId>com.cefetqps</groupId>
 	<artifactId>cefet-qps</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>cefet-qps</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Tis but a amazing Software Product Quality's class project</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -37,6 +38,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
